--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,11 +2,11 @@ name: workflow
 
 on: 
   push:
-      branches:
-              - 'release/v[0-9]+.[0-9]+'
+    branches:
+      - 'release/v[0-9]+.[0-9]+'
 
-#SCAN
 jobs:
+  # SCAN
   build:
     name: Build
     runs-on: ubuntu-20.04
@@ -28,17 +28,17 @@ jobs:
         with:
           sarif_file: 'trivy-results.sarif'
 
-#Slack Notification
-- name: Send GitHub Action trigger data to Slack workflow
-  id: slack
-  uses: slackapi/slack-github-action@v1.26.0
-  env:
-    SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
-#Message Format
+      # Slack Notification
+      - name: Send GitHub Action trigger data to Slack workflow
+        id: slack
+        uses: slackapi/slack-github-action@v1.26.0
+        env:
+          SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
 
-#Slack upload file 
-jobs:
-  post:
+      # Message Format
+
+      # Slack upload file 
+   post:
     runs-on: ubuntu-latest
     steps:
       - uses: MeilCli/slack-upload-file@v4
@@ -50,47 +50,43 @@ jobs:
           file_name: 'text.txt'
           title: 'title of file'
           initial_comment: 'post by slack-upload-file'
-          # thread_ts: 'option
+          # thread_ts: 'option'
 
-#Build and push docker container
-name: ci
+# Build and push docker container
+  ci:
+    name: ci
+    on:
+      push:
+        branches:
+          - 'main'
+    jobs:
+      docker:
+        runs-on: ubuntu-latest
+        steps:
+          -
+            name: Set up QEMU
+            uses: docker/setup-qemu-action@v3
+          -
+            name: Set up Docker Buildx
+            uses: docker/setup-buildx-action@v3
+          -
+            name: Login to Docker Hub
+            uses: docker/login-action@v3
+            with:
+              username: ${{ secrets.DOCKERHUB_USERNAME }}
+              password: ${{ secrets.DOCKERHUB_TOKEN }}
+          -
+            name: Build and push
+            uses: docker/build-push-action@v5
+            with:
+              push: true
+              tags: user/app:latest
 
-on:
-  push:
-    branches:
-      - 'main'
-
-jobs:
-  docker:
-    runs-on: ubuntu-latest
-    steps:
-      -
-        name: Set up QEMU
-        uses: docker/setup-qemu-action@v3
-      -
-        name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
-      -
-        name: Login to Docker Hub
-        uses: docker/login-action@v3
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
-      -
-        name: Build and push
-        uses: docker/build-push-action@v5
-        with:
-          push: true
-          tags: user/app:latest
-
-#Digitally Sign images with Cosign
-jobs:
+# Digitally Sign images with Cosign
   example:
+    name: example
     runs-on: ubuntu-latest
-
     permissions: {}
-
-    name: Install Cosign via go install
     steps:
       - name: Install go
         uses: actions/setup-go@v4
