--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,7 +6,6 @@ on:
       - 'release/v[0-9]+.[0-9]+'
 
 jobs:
-  
   build:
     name: Build
     runs-on: ubuntu-20.04
@@ -28,17 +27,13 @@ jobs:
         with:
           sarif_file: 'trivy-results.sarif'
 
-  
       - name: Send GitHub Action trigger data to Slack workflow
         id: slack
         uses: slackapi/slack-github-action@v1.26.0
         env:
           SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
 
-
-
-
-   post:
+  post:
     runs-on: ubuntu-latest
     steps:
       - uses: MeilCli/slack-upload-file@v4
@@ -51,8 +46,6 @@ jobs:
           title: 'title of file'
           initial_comment: 'post by slack-upload-file'
    
-
-
   ci:
     name: ci
     on:
@@ -63,25 +56,20 @@ jobs:
       docker:
         runs-on: ubuntu-latest
         steps:
-          -
-            name: Set up QEMU
+          - name: Set up QEMU
             uses: docker/setup-qemu-action@v3
-          -
-            name: Set up Docker Buildx
+          - name: Set up Docker Buildx
             uses: docker/setup-buildx-action@v3
-          -
-            name: Login to Docker Hub
+          - name: Login to Docker Hub
             uses: docker/login-action@v3
             with:
               username: ${{ secrets.DOCKERHUB_USERNAME }}
               password: ${{ secrets.DOCKERHUB_TOKEN }}
-          -
-            name: Build and push
+          - name: Build and push
             uses: docker/build-push-action@v5
             with:
               push: true
               tags: user/app:latest
-
 
   example:
     name: example
