--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -80,3 +80,17 @@ jobs:
             images+="${tag}@${DIGEST} "
           done
           cosign sign --yes ${images}
+      
+      - name: Send Slack successful message
+        if: success() 
+        uses: slackapi/slack-github-action@v1.26.0
+        env:
+          SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
+          SLACK_MESSAGE: 
+          SLACK_MESSAGE: "
+          *Image build & signed*\n
+          *Name:*Zhao Ziyang \n
+          *Matriculation:* A028\n
+          *Email:*e1221735 \n
+          *Git:* \n
+          *Docker:* "
