--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -71,12 +71,7 @@ jobs:
         env:
           DIGEST: ${{ steps.build-and-push.outputs.digest }}
           TAGS: ${{ steps.docker_meta.outputs.tags }}
-        run: |
-          images=" "
-          for tag in ${TAGS}; do
-            images+="${tag}@${DIGEST} "
-          done
-          cosign sign --yes ${images}
+        run: cosign sign --yes ${digest}
       
       - name: Send Slack successful message
         if: success() 
