--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,10 +17,9 @@ jobs:
         uses: aquasecurity/trivy-action@master
         with:
           scan-type: 'fs'
-          ignore-unfixed: true 
-          format: 'sarif'
-          output: 'trivy-results.sarif'
-          severity: 'CRITICAL' 
+          format: 'table'
+          output: 'trivy-results.txt'
+          severity: 'HIGH' 
 
       - name: Send Slack failure message
         if: failure() 
