--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,6 +14,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Run Trivy vulnerability scanner in repo mode 
+        id: Trivy
         uses: aquasecurity/trivy-action@master
         with:
           scan-type: 'fs'
@@ -22,14 +23,14 @@ jobs:
           severity: 'HIGH' 
 
       - name: Send Slack failure message
-        if: failure() 
+        if: steps.Trivy.outcome == 'failure'
         uses: rtCamp/action-slack-notify@v2
         env:
           SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
           SLACK_MESSAGE: "Scan failure!"    
 
       - name: Upload Trivy scan results to slack
-        if: failure()
+        if: steps.Trivy.outcome == 'failure'
         uses: MeilCli/slack-upload-file@v4
         with:
           slack_token: ${{ secrets.SLACK_TOKEN }}
