--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,12 +22,17 @@ jobs:
           output: 'trivy-results.txt'
           severity: 'HIGH' 
 
-      - name: Send Slack failure message
-        if: steps.Trivy.outcome == 'failure'
+      - name: Send Slack message
+        if: steps.Trivy.outcome == 'failure' || steps.Trivy.outputs.severity == 'CRITICAL'
         uses: rtCamp/action-slack-notify@v2
         env:
           SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
-          SLACK_MESSAGE: "Scan failure!"    
+          SLACK_MESSAGE: |
+            ${{ if eq(steps.Trivy.outputs.severity, 'CRITICAL') }}
+              Scan successful!
+            ${{ else }}
+              Scan failure!
+            ${{ end }}
 
       - name: Upload Trivy scan results to slack
         if: steps.Trivy.outcome == 'failure'
@@ -35,7 +40,7 @@ jobs:
         with:
           slack_token: ${{ secrets.SLACK_TOKEN }}
           channel_id: ${{ secrets.SLACK_CHANNEL_ID }}
-          file: trivy-results.sarif
+          file: trivy-results.txt
 
       - name: Checkout
         uses: actions/checkout@v4
@@ -80,14 +85,14 @@ jobs:
           cosign sign --yes ${images}
       
       - name: Send Slack successful message
-        if: success() 
+        if: steps.Trivy.outputs.severity == 'CRITICAL'
         uses: slackapi/slack-github-action@v1.26.0
         env:
           SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
-          SLACK_MESSAGE: "
-          *Image build & signed*\n
-          *Name:*Zhao Ziyang \n
-          *Matriculation:* A028\n
-          *Email:*e1221735 \n
-          *Git:* \n
-          *Docker:* "
+          SLACK_MESSAGE: |
+            *Image build & signed*
+            *Name:* Zhao Ziyang 
+            *Matriculation:* A028
+            *Email:* e1221735 
+            *Git:* 
+            *Docker:*
