--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,7 +30,7 @@ jobs:
 
       - name: Check file content
         id: check_file_content
-        run: echo "trivy-results=$(cat trivy-results.txt)" >> $GITHUB_OUTPUT
+        run: echo "trivy-results=$(du -s trivy-results.txt | awk '{print $1}')" >> $GITHUB_OUTPUT
       - name: Test output
         run: echo ${{ steps.check_file_content.outputs.trivy-results }}
 
