--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -98,8 +98,8 @@ jobs:
           SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK_URL }}
           SLACK_MESSAGE: |
             *Image build & signed*
-            *Name:* cher wah
-            *Matriculation:*  123456
-            *Email:* 123466
-            *Git:* 4646
-            *Docker:* 4564565
+            *Name:* Cher Wah
+            *Matriculation:* 123346
+            *Email:* cherwah@iss.sg
+            *Git:* https://chatgpt.com/?oai-dm=1
+            *Docker:* https://www.bilibili.com/
