--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,6 +5,8 @@ on:
     branches:
       - 'release/v[0-9]+.[0-9]+'
 
+    if: "!contains(github.event.head_commit.message, '#NORUN')"
+    
 jobs:
   build:
     name: Build
