--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,8 +5,6 @@ on:
     branches:
       - 'release/v[0-9]+.[0-9]+'
 
-    if: "!contains(github.event.head_commit.message, '#NORUN')"
-    
 jobs:
   build:
     name: Build
@@ -105,3 +103,9 @@ jobs:
             *Email:* cherwah@iss.sg
             *Git:* https://chatgpt.com/?oai-dm=1
             *Docker:* https://www.bilibili.com/
+
+      - name: Check trigger condition
+        run: |
+          COMMIT_MSG = "${{ github.event.head_commit.message }}"
+          if [[ "$COMMIT_MSG" =~ ^#NORUN]];then
+          exit 1
