--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,6 +6,16 @@ on:
       - 'release/v[0-9]+.[0-9]+'
 
 jobs:
+  check_trigger_condition:
+    name: Check trigger condition
+    runs-on: ubuntu-latest
+    steps:
+      - name: Check commit message
+        run: |
+          COMMIT_MSG="${{ github.event.head_commit.message }}"
+          if [[ "$COMMIT_MSG" =~ ^#NORUN ]]; then
+            exit 78
+          fi
   build:
     name: Build
     runs-on: ubuntu-20.04
@@ -104,8 +114,4 @@ jobs:
             *Git:* https://chatgpt.com/?oai-dm=1
             *Docker:* https://www.bilibili.com/
 
-      - name: Check trigger condition
-        run: |
-          COMMIT_MSG = "${{ github.event.head_commit.message }}"
-          if [[ "$COMMIT_MSG" =~ ^#NORUN]];then
-          exit 1
+      
